[package]
name = "ftbu-drp-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
tracing = "0.1.23"
tracing-subscriber = "0.3.16"